RESOLVED FIXED91455
[Chromium] TextInputController shouldn't know about TestShell
https://bugs.webkit.org/show_bug.cgi?id=91455
Summary [Chromium] TextInputController shouldn't know about TestShell
Adam Barth
Reported 2012-07-16 17:41:19 PDT
[Chromium] TextInputController shouldn't know about TestShell
Attachments
Patch (9.54 KB, patch)
2012-07-16 17:42 PDT, Adam Barth
no flags
Patch (9.54 KB, patch)
2012-07-16 23:29 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-07-16 17:42:07 PDT
Adam Barth
Comment 2 2012-07-16 23:29:22 PDT
Kent Tamura
Comment 3 2012-07-17 01:02:23 PDT
Comment on attachment 152702 [details] Patch ok
Adam Barth
Comment 4 2012-07-17 01:10:58 PDT
Comment on attachment 152702 [details] Patch Clearing flags on attachment: 152702 Committed r122821: <http://trac.webkit.org/changeset/122821>
Adam Barth
Comment 5 2012-07-17 01:11:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.