[Chromium] TextInputController shouldn't know about TestShell https://bugs.webkit.org/show_bug.cgi?id=91455

Reviewed by Kent Tamura.

This patch uses the same pattern we used for the
AccessibilityController to remove the dependency on TestShell.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::initialize):
(TestShell::createMainWindow):
(TestShell::~TestShell):
* DumpRenderTree/chromium/TextInputController.cpp:
(TextInputController::TextInputController):
(TextInputController::insertText):
(TextInputController::doCommand):
(TextInputController::setMarkedText):
(TextInputController::unmarkText):
(TextInputController::hasMarkedText):
(TextInputController::markedRange):
(TextInputController::selectedRange):
(TextInputController::firstRectForCharacterRange):
(TextInputController::validAttributesForMarkedText):
(TextInputController::setComposition):
* DumpRenderTree/chromium/TextInputController.h:
(WebKit):
(TextInputController):
(TextInputController::setWebView):

Canonical link: https://commits.webkit.org/109287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122821 268f45cc-cd09-0410-ab3c-d52691b4dbfc